MMA-7063 Rydding i static imports, logg etc.